fixed overflow issue

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,3 +1,6 @@
+.home-section{
+  overflow: hidden;
+}
 .restaurant-list-section {
   width: 100%;
     background-color: #ffffff;
@@ -95,9 +98,17 @@
 }
 
 .pagination-section{
+  font-family: Bree Serif;
+font-weight: 400;
+font-size: 20px;
+line-height: 100%;
+letter-spacing: 0%;
+text-align: center;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+    cursor: pointer;
 }
