--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,148 +1,4 @@
-/*.login-container {
-  display: flex;
-  background-color: #fff;
-  overflow: hidden;
-  height: 100vh;
-  width: 100vw;
-  font-family: "DM Sans", sans-serif;
-}
-
-.food-image {
-  object-fit: cover;
-  height: 100%;
-  width: 50vw;
-}
-
-.login-form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: "DM Sans", sans-serif;
-  width: 50vw;
-  color: #fefeff;
-}
-
-.form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 8px 40px 0px rgba(7, 7, 7, 0.08);
-  min-width: 456px;
-  min-height: 523px;
-  background: #ffffff;
-  border-radius: 12px;
-}
-
-.login-btn {
-  width: 360px;
-  height: 40px;
-  background-color: #f7931e;
-  border: none;
-  border-radius: 8px;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.7142857142857142em;
-  color: #ffffff;
-  text-align: center;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.login-details-container {
-  display: flex;
-  flex-direction: column;
-  color: #475569;
-  gap: 7px;
-}
-
-.form-container h1 {
-  color: rgba(15, 23, 42, 1);
-  font-family: "DM Sans";
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 40px;
-  letter-spacing: 0%;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.login-container input {
-  width: 360px;
-  height: 40px;
-  opacity: 1;
-  top: 24px;
-  border-radius: 2px;
-  background-color: rgba(226, 232, 240, 1);
-  border-style: none;
-  padding: 4px;
-}
-
-.login-container label {
-  font-family: "DM Sans";
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 1%;
-  text-transform: uppercase;
-}
-
-.logo-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #f7931e;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 700;
-  font-size: 10px;
-  line-height: 32px;
-  letter-spacing: 0;
-}
-
-.err-msg {
-  color: #ef4444;
-}
-
-/* ---------- 📱 Mobile Layout ---------- */
-/*@media screen and (max-width: 768px) {
-  .login-container {
-    flex-direction: row;
-    justify-content: center;
-    opacity: 1;
-    min-width: 312px;
-    min-height: 40px;
-  }
-
-  .food-image {
-    order: 0;
-    max-width: 387px;
-    max-height: 387px;
-    opacity: 1;
-    top: -38px;
-    left: 56px;
-    border-radius: 249.94px;
-  }
-
-  .form-container {
-    order: 1;
-    min-width: 360px;
-    box-shadow: none;
-    border: none;
-  }
-
-  .logo-container {
-    display: none;
-  }
-}
-*/
-
-/* *{
-  box-sizing: border-box;
-} */
 body {
-  /* overflow: hidden; */
   font-family: "DM Sans", sans-serif;
 }
 
@@ -150,6 +6,7 @@ body {
   display: flex;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .login-form-container {
